Init: improve layout of text editor, need to find solution for spoilers on smartphones

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3119,6 +3119,10 @@ html {
   max-width: 20rem;
 }
 
+.max-w-prose {
+  max-width: 65ch;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -3219,8 +3223,17 @@ html {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.hyphens-auto {
+  -webkit-hyphens: auto;
+          hyphens: auto;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded {
@@ -3594,6 +3607,11 @@ html {
   color: hsl(var(--erc) / var(--tw-text-opacity));
 }
 
+.focus-within\:text-white:focus-within {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .hover\:border:hover {
   border-width: 1px;
 }
@@ -3611,6 +3629,10 @@ html {
 @media not all and (min-width: 1536px) {
   .max-2xl\:hidden {
     display: none;
+  }
+
+  .max-2xl\:flex-col {
+    flex-direction: column;
   }
 
   .max-2xl\:items-center {
@@ -3636,5 +3658,17 @@ html {
 
   .\32xl\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .\32xl\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .\32xl\:w-1\/2 {
+    width: 50%;
+  }
+
+  .\32xl\:max-w-prose {
+    max-width: 65ch;
   }
 }
