Init: try different style for comment form

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3032,28 +3032,21 @@ html {
   position: static;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.z-10 {
-  z-index: 10;
 }
 
 .z-\[1\] {
   z-index: 1;
 }
 
-.float-left {
-  float: left;
-}
-
 .m-1 {
   margin: 0.25rem;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .mx-2 {
@@ -3071,22 +3064,17 @@ html {
   margin-bottom: 0px;
 }
 
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mt-2 {
@@ -3226,6 +3214,18 @@ html {
   max-width: 20rem;
 }
 
+.max-w-96 {
+  max-width: 24rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -3236,10 +3236,6 @@ html {
 
 .shrink-0 {
   flex-shrink: 0;
-}
-
-.origin-top-right {
-  transform-origin: top right;
 }
 
 .cursor-pointer {
@@ -3591,6 +3587,10 @@ html {
 
 .normal-case {
   text-transform: none;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .text-black {
