Init: add additional error icons

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3121,6 +3121,10 @@ html {
   height: 3rem;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-24 {
   height: 6rem;
 }
@@ -3153,6 +3157,10 @@ html {
   height: 100vh;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .max-h-96 {
   max-height: 24rem;
 }
@@ -3175,6 +3183,10 @@ html {
 
 .w-12 {
   width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-3 {
@@ -3220,6 +3232,10 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .max-w-3xl {
